// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShapedLinkUI SNAPSHOT TESTS Rectangular link should not be changed 1`] = `
<a
  class="container container_rectangular "
  href="#!"
  role="link-to-media"
>
  <div
    class="container__content"
  >
    <div
      class="container__textSingle"
    >
      <img
        alt="Иконка умных устройств"
        data-nimg="1"
        decoding="async"
        height="20"
        loading="lazy"
        src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
        style="color: transparent;"
        width="20"
      />
      Все устройства
    </div>
  </div>
</a>
`;

exports[`ShapedLinkUI SNAPSHOT TESTS Round link should not be changed 1`] = `
<a
  class="container container_round "
  href="https://t.me/official_iviru"
  role="link-to-media"
>
  <div
    class="container__content"
  >
    <img
      alt="Логотип Telegram"
      data-nimg="1"
      decoding="async"
      height="16"
      loading="lazy"
      src="https://solea-parent.dfs.ivi.ru/picture/ffffff,ffffff/social_telegram.svg"
      style="color: transparent;"
      width="16"
    />
  </div>
</a>
`;
